testsuite/tests/partial-sigs/should_fail/WildcardInStandaloneDeriving.stderr

WildcardInStandaloneDeriving.hs:4:19: error: Malformed instance: _

WildcardInStandaloneDeriving.hs:4:19: error:
    Wildcard ‘_’ not allowed
      in In a deriving declaration
